force-app/main/default/objects/maps__AdvRouteOffDays__c/maps__AdvRouteOffDays__c.object-meta.xml
<CustomObject>
    <description>This holds the working hours for users</description>
    <label>Maps Advanced Route Off Days</label>
    <nameField>
        <label>Maps Advanced Route Off Days Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Advanced Route Off Days</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>