force-app/main/default/objects/maps__AdvRouteOffDays__c/fields/maps__DaysOfWeek__c.field-meta.xml
<CustomField>
    <fullName>maps__DaysOfWeek__c</fullName>
    <description>These are the days of the week that the off days are valid for</description>
    <label>Day(s) of Week</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>maps__AdvRouteDaysOfWeek</valueSetName>
    </valueSet>
</CustomField>