force-app/main/default/objects/maps__AdvRouteOffDays__c/fields/maps__Default__c.field-meta.xml
<CustomField>
    <fullName>maps__Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used to determine the default settings</description>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>