force-app/main/default/objects/maps__AdvRouteOffDays__c/fields/maps__EndDate__c.field-meta.xml
<CustomField>
    <fullName>maps__EndDate__c</fullName>
    <description>This is the end date for a off days exception</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>