force-app/main/default/objects/maps__AdvRouteOffDays__c/fields/maps__EndTime__c.field-meta.xml
<CustomField>
    <fullName>maps__EndTime__c</fullName>
    <description>This is the end time of the working hours</description>
    <label>End Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>maps__AdvRouteTimeWindows</valueSetName>
    </valueSet>
</CustomField>