force-app/main/default/objects/maps__AdvRouteOffDays__c/fields/maps__LunchBreakEnd__c.field-meta.xml
<CustomField>
    <fullName>maps__LunchBreakEnd__c</fullName>
    <description>This is the end of the lunch break</description>
    <label>Lunch Break End</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>maps__AdvRouteTimeWindows</valueSetName>
    </valueSet>
</CustomField>