force-app/main/default/objects/maps__AdvRouteOffDays__c/fields/maps__StartDate__c.field-meta.xml
<CustomField>
    <fullName>maps__StartDate__c</fullName>
    <description>This is the start date for a off days exception</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>