force-app/main/default/objects/maps__AdvRouteOffDays__c/fields/maps__StartTime__c.field-meta.xml
<CustomField>
    <fullName>maps__StartTime__c</fullName>
    <description>This is the start time of the off days</description>
    <label>Start Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>maps__AdvRouteTimeWindows</valueSetName>
    </valueSet>
</CustomField>